Add options for results
